# flower-federated-learning

./: .gitignore  ARCHITECTURE_ANALYSIS.md  README.md  pyproject.toml  run_advanced_pytorch.slurm  run_flower.slurm  run_flower_part1.slurm  run_flower_part2.slurm  run_flower_part3.slurm  run_flower_part4.slurm  run_jax.slurm  run_lightning.slurm  run_pandas.slurm  run_sklearn.slurm  run_xgboost.slurm
advanced-pytorch/: pyproject.toml
advanced-pytorch/pytorch_example/: server_app.py
docs/: COMPLETION_REPORT.md  DISTRIBUTED_OPTIMIZATION_NOTES.md  DP_VARIANTS_NOTES.md
dp-experiments/: pyproject.toml  run_dp_experiments.slurm  run_experiments.py  run_standalone.slurm  run_standalone_experiments.py
dp-experiments/dp_experiment/: __init__.py  client_app.py  server_app.py  task.py
dp-experiments/results_20251209_094949/: summary.txt
examples/advanced/advanced-pytorch/pytorch_example/: strategy.py  task.py
examples/advanced/federated-vae/: pyproject.toml  run_federated_vae.slurm
examples/advanced/kaplan-meier-fl/: pyproject.toml  run_kaplan_meier.slurm
examples/advanced/opacus-dp/: pyproject.toml  run_opacus_dp.slurm
examples/advanced/opacus-dp/opacus_fl/: task.py
examples/advanced/tabular-fl/: run_tabular_fl.slurm
examples/advanced/tabular-fl/fltabular/: task.py
examples/advanced/vertical-fl/: pyproject.toml  run_vertical_fl.slurm
examples/advanced/vertical-fl/vertical_fl/: task.py
examples/dp/: run_standalone_experiments_refactored.py
examples/fedprox/: fedprox_implementation.py  fedprox_implementation_refactored.py
examples/flower-basics/flower_tutorial/: client_app_part4.py  custom_strategy.py  custom_strategy_wandb.py  server_app_backup.py  server_app_part1.py  server_app_part4.py
examples/flower-basics/jax-quickstart/: README.md  pyproject.toml
examples/flower-basics/jax-quickstart/jax_quickstart/: client_app.py  server_app.py  task.py
examples/flower-basics/sklearn-quickstart/: README.md
examples/flower-basics/sklearn-quickstart/sklearn_quickstart/: server_app.py  task.py
examples/flower-basics/xgboost-quickstart/: README.md  pyproject.toml
examples/flower-basics/xgboost-quickstart/xgboost_quickstart/: __init__.py
examples/quickstarts/lightning-quickstart/pytorchlightning_example/: task.py
examples/quickstarts/sklearn-quickstart/: logreg_model.pkl
examples/quickstarts/tensorflow-quickstart/: pyproject.toml  run_tensorflow.slurm
examples/quickstarts/tensorflow-quickstart/tfexample/: task.py
examples/scaffold/: scaffold_implementation.py  scaffold_implementation_refactored.py
federated-vae/fedvaeexample/: task.py
fl-dp-sa/: pyproject.toml  run_fl_dp_sa.slurm
fl-dp-sa/fl_dp_sa/: server_app.py  task.py
flower-tutorial/: pyproject.toml
flower-tutorial/flower_tutorial/: advanced_strategy.py  custom_strategy_part4.py  server_app_part3.py  task.py  task.py.bak
flower-tutorial/jax-quickstart/jax_quickstart/: __init__.py
flower-tutorial/outputs/2025-12-09/08-35-10/wandb/: latest-run
flower-tutorial/outputs/2025-12-09/08-35-10/wandb/offline-run-20251209_083510-onkzlrhc/: run-onkzlrhc.wandb
flower-tutorial/outputs/2025-12-09/08-48-41/wandb/: latest-run
flower-tutorial/outputs/2025-12-09/08-48-41/wandb/offline-run-20251209_084842-ymckscnr/: run-ymckscnr.wandb
flower-tutorial/outputs/2025-12-09/08-48-41/wandb/offline-run-20251209_084842-ymckscnr/files/: requirements.txt
flower-tutorial/sklearn-quickstart/: pyproject.toml
flower-tutorial/sklearn-quickstart/sklearn_quickstart/: __init__.py  client_app.py
flower-tutorial/xgboost-quickstart/xgboost_quickstart/: client_app.py  server_app.py  task.py
kaplan-meier-fl/examplefkm/: task.py
secure-aggregation/: pyproject.toml  run_secagg.slurm
secure-aggregation/secaggexample/: task.py
src/fl_research/: __init__.py
src/fl_research/models/: __init__.py  cnn.py  mlp.py  registry.py
src/fl_research/privacy/: __init__.py  accountant.py  mechanisms.py  opacus_utils.py
src/fl_research/strategies/: __init__.py  base.py  fedavg.py  fedprox.py  scaffold.py
src/fl_research/utils/: __init__.py  checkpointing.py  config.py  logging.py  metrics.py  reproducibility.py
tabular-fl/: pyproject.toml
tensorflow-quickstart/: final_model.keras
tests/: conftest.py  test_data.py  test_models.py  test_privacy.py  test_utils.py
week1-2-foundations/: PLAN.md
week3-4-dp-theory/: PLAN.md
week3-4-dp-theory/experiments/paper_replication/: run_sweep.py  run_sweep.slurm
week3-4-dp-theory/notebooks/: 01_approximate_dp.py  02_renyi_dp.py  03_local_dp.py  04_bayesian_dp.py
week5-6-scaling/: PLAN.md
week5-6-scaling/experiments/fedprox/: run_fedprox.slurm
week5-6-scaling/experiments/scaffold/: run_scaffold.slurm
week5-6-scaling/notebooks/: 01_distributed_optimization.py  02_algorithm_comparison.py  03_hpc_patterns.py
xgboost-quickstart/xgboost_quickstart/: task.py
