[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dp_experiment"
version = "1.0.0"
description = "DP Experiments: IID vs Non-IID with Multiple Epsilon Settings"

dependencies = [
    "flwr[simulation]>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opacus>=1.4.0",
    "tqdm",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "experiment"

[tool.flwr.app.components]
serverapp = "dp_experiment.server_app:app"
clientapp = "dp_experiment.client_app:app"

[tool.flwr.app.config]
# Default configuration - will be overridden by run script
num-server-rounds = 5
target-delta = 1e-5
max-grad-norm = 1.0
noise-multiplier = 1.0
is-iid = true
dirichlet-alpha = 0.5
experiment-name = "default"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
