[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-tabular"
version = "1.0.0"
description = "Tabular Dataset Federated Learning (Modified for HPC)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.24.0",
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "fltabular.server_app:app"
clientapp = "fltabular.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
