[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vertical-fl"
version = "1.0.0"
description = "PyTorch Vertical FL with Flower (Modified for HPC)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.24.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.0.0",
    "torch>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "vertical_fl.server_app:app"
clientapp = "vertical_fl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 100
learning-rate = 0.01
out-feature-dim-clientapp = 64
# Feature splits: 2 features for client 0, 3 for client 1, 2 for client 2
feature-splits = "2,3,2"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
